[136] Added some tests, started testing dissertation

--- a/Documentation/Dissertation/dissertation.bib
+++ b/Documentation/Dissertation/dissertation.bib
@@ -55,3 +55,22 @@
   pages={251--257},
   year={2012}
 }
+
+%https://www.agilealliance.org/glossary/bdd/
+@misc{agilealliance_bdd,
+	title={Behavior Driven Development (BDD)},
+	author={Agile Alliance},
+	note={Accessed: 2017-03-24},
+	howpublished={\url{https://www.agilealliance.org/glossary/bdd}}
+}
+
+%https://dannorth.net/introducing-bdd/
+@article{north2006bdd,
+  author  = {Dan North}, 
+  title   = {Introducing BDD},
+  journal = {Better Software},
+  year    = {2006},
+  month   = {June},
+  volume  = {2006-03},
+  howpublished = {\url{https://dannorth.net/introducing-bdd/}}
+}
