--- a/Documentation/Dissertation/dissertation.tex
+++ b/Documentation/Dissertation/dissertation.tex
@@ -1,26 +1,17 @@
 % This example An LaTeX document showing how to use the l3proj class to
 % write your report. Use pdflatex and bibtex to process the file, creating
 % a PDF file as output (there is no need to use dvips when using pdflatex).
-
-
 \documentclass{l3proj}
-
 \begin{document}
-
 \title{Global Rugby Network FanZone (Web)}
-
 \author{Ruxandra Bob \\
 		Marios Constantinou \\
         Daniel Juranec \\
         Arnas Kapustinskas \\
         Andrew McCluskey}
-
 \date{10 February 2017}
-
 \maketitle
-
 \begin{abstract}
-
 Report on Team Project 3 coursework for Group V. The GRN Fanzone is a
  fan engagement web application developed to interface with the Global Rugby
  Network's online platform. The project tried to utilise 
@@ -29,43 +20,30 @@ Report on Team Project 3 coursework for Group V. The GRN Fanzone is a
  project management. This report covers some of the considerations taken
  during development and explains some of the benefits and disadvantages
  of the way the development team operated.
-
 \end{abstract}
-
 %% Comment out this line if you do not wish to give consent for your
 %% work to be distributed in electronic format.
 \educationalconsent
-
 \newpage
-
 %==============================================================================
 \section{Introduction}
-
-Software engineering
-
-This paper presents a case study of...
-
-
-%% Final paragraph.
-The rest of the case study is structured as follows.  Section
-\ref{sec:background} presents the background of the case study
-discussed, describing the customer and project context, aims and
-objectives and project state at the time of writing.  Sections
-\ref{sec:cicd} through Section \ref{sec:frontend} discuss issues that
-arose during the project...
-
+This paper presents a case study of the project and software development process of Group V, which consists of five students studying Software Engineering at the University of Glasgow, done as part of the University's Team Project 3 course.
+Our customers for the project were Global Rugby Network (GRN), who tasked us with creating a web application that would allow professional and amateur rugby clubs, teams, and players to interact with rugby fans. This social platform would then be integrated with the software that GRN already provides to rugby clubs. The end result is GRNFanZone, a fully functioning web application that allows people to follow their favourite clubs, see the latest posts made by them, find rugby matches happening near them, and much more.
+The purpose of this document is to reflect on the achievements and challenges that arose during the development of this project. It also explores the concepts and methodologies touched upon in the concurrently running Professional Software Development (PSD) course, how we decided to implement them, and the effectiveness of our implementation.
+The rest of the case study is structured as follows. 
+Section \ref{sec:background} presents the background of the case study discussed, describing the customer and project context, aims and objectives and project state at the time of writing.
+Section \ref{sec:cicd} discusses the Continuous Integration and Continuous Deployment techniques that were used in order to ensure higher quality of code and to continuously deliver new implementations. It also outlines challenges the team faced when using these techniques.
+Section \ref{sec:frontend} talks about the key technology used for the Frontend implementation of the project. It contains an overview of the technology and justification for its usage in the project.
+Section \ref{sec:conclusion} is the conclusion, where we evaluate our performance over the whole process, what has been learned from it and how this experience can benefit us in following professional software projects.
 %==============================================================================
 \section{Case Study Background}
 \label{sec:background}
-
 Include details of
-
 \begin{itemize}
 \item The customer organisation and background.
 \item The rationale and initial objectives for the project.
 \item The final software was delivered for the customer.
 \end{itemize}
-
 %==============================================================================
 %\section{Alice}
 %\label{sec:alice}
@@ -243,6 +221,32 @@ One of Angular's benefits is that its developers have thoughtfully
  good tests (please see section \ref{sec:testing} for more on this).
  
 \input{figures/frontend_ng_cli}
+
+%==============================================================================
+\newpage
+\section{Project Planning}
+\label{sec:planning}
+
+After the project allocation day, GRN have sent us a project brief containing greater details about the project itself, as well as a list of functional requirements that the final product would be expected to meet. The first task we needed to complete was a detailed requirements document, that would contain non-functional and any additional functional requirements. It was decided that the focus of the first month would be allocated to finalizing the document, in order to assure that the client approved of the direction the team decided to take in working on the project.
+
+As part of the requirements gathering process, the team developed four personas and an epic description of how they would end up using the FanZone in their daily lives, illustrating that by documenting epic user stories. This was followed by writing down user stories centered around the following entities: team manager, sponsor, player, club supporter, rugby fan and international rugby fan. Doing this eased the process of identifying useful requirements and helped the team visualize what the final product should be offering potential users.
+
+After the initial requirements were outlined, the team followed by designing wireframes of the web application. Initially, each team member delivered a pencil-drawn sketch of each expected application screen. Afterwards, the best design from each wireframe were merged into the main wireframes, drawn using draw.io. GRN warned us that the main wireframes would not offer useful guidance when thinking how the application should transition to a mobile format, so the team repeated the process to generate mobile wireframes.
+
+Over the weeks dedicated to producing the requirements document, the team kept close contact with GRN, who have repeatedly offered helpful feedback and guidance regarding how the team can meet their expectations of the final product. This gave us some understanding of what the client found to be of most importance, and it helped us in the next stage in our project, which was prioritising the features of the application and separating them into achievable goals for each iteration.
+
+There were several aspects to be taken into consideration while deciding on a concrete structure of the development process. We had to consider our lack of experience with the technologies to be used and the fact that the available time to work on the project would vary as the academic year progressed. Another thing to consider was the fact that due to the agile methodology we decided to follow, at the end of each iteration, the product needed to be functional. Thus, it was decided to settle on having smaller, more easily achievable goals in the beginning, which would incrementally become more complex as advanced. In the end, we settled on seven iterations, excluding the initial one focused on the requirements document.
+
+
+The goals for each iteration become increasingly challenging, based on the expectancy that the first one or two iterations would offer all team members some hands on experience with both Angular2 and Firebase. The goals for each iteration were the following: first iteration - login and sign up; second iteration - dashboard and followed pages; third iteration - post creation and management; fourth iteration - view and edit profile, posts on comments; fifth iteration - search for teams/clubs/players or fixtures; sixth iteration - translation and additional tasks; seventh iteration - additional features, refinement, documentation.
+
+\input{figures/milestones}
+
+Gitlab allowed us to create project milestones. Each of them had a number of issues associated with it, the issues consisting of the goals for the respective iteration split into several multiple smaller issues. The deadline of each iteration would also appear on each issues, becoming bright red as the date came nearer, in order to alert the person assigned to the task.
+
+Throughout the project, our process was modified and improved by having team retrospectives around the end of each iteration. The format of the retrospectives consisted of every team member going through what they thought went good in our past iteration, what they thought went bad and what ideas they have to improve our workflow in future iterations. All these were discussed within the team and what the majority considered useful ideas were then included in the further development. The main points of each retrospective are documented on the wiki page of the project, which can be found on Gitlab.
+
+
 
 %==============================================================================
 \newpage
