[131] reflection on change management methods done

--- a/Documentation/Dissertation/dissertation.bib
+++ b/Documentation/Dissertation/dissertation.bib
@@ -92,3 +92,11 @@
   note = {Accessed: 2017-03-24},
   author = {Scrum Alliance}
   }
+
+%http://nvie.com/posts/a-successful-git-branching-model/
+@misc{gitflow,
+  title={A successful {Git} branching model},
+  author={Vincent Driessen},
+  note={Accessed: 2017-03-26},
+  howpublished={\url{http://nvie.com/posts/a-successful-git-branching-model/}}
+}
