[131] rename the figure

--- a/Documentation/Dissertation/dissertation.tex
+++ b/Documentation/Dissertation/dissertation.tex
@@ -475,7 +475,7 @@ After we gathered the requirements for the project and defined the general devel
 
 For our branching model we selected one called Gitflow. \cite{gitflow} At its core, there are two main branches - dev and master. The master branch is the production-ready branch, and it reflects the state of the latest production release. Meanwhile, the dev branch reflects the state of our latest development efforts. We usually merged the changes from dev into master once a week to ensure the least amount of bugs possible, as most of the testing was done even before merging to the dev branch.
 
-\input{figures/merge_request}
+\input{figures/changemgmt_merge_request}
 
 In the Gitflow model, dev by itself does not allow any commits. therefore all the development has to be done in separate branches, called feature branches. For each issue in the issue tracker, its assignee created a new branch, and went on coding in that branch. We encouraged every team member to commit often, as it let us follow the development process better; to add to that, the testing of every commit, powered by our continuous integration system, enabled us to catch bugs early on. After the development of the feature was done, the assignee submitted a merge request for the feature branch to be merged into dev. It first had to be approved by any other team member, after he performed a code review. Code reviews allowed us to find mistakes in the source code not noticed by the developer, and therefore improve the quality of our project. If any mistakes were found, the reviewer could add some comments to the merge request, explaining what could be improved. Another thing which could prevent the merge request was merge conflicts. They occured if Git could not figure out on its own which lines of the source code to add, keep or remove, in case that files in dev and in feature branch differed greatly. It was on the assignee to resolve the merge conflicts. In the end, if CI tests passed, the merge requests were resolved, and the code reviews were performed, the merge request could be accepted. It resulted in the issue being closed, the new code being merged into the dev branch, and the feature branch being removed, so as not to clutter the repository with unnecessary files.
 
